# race_kabirhan

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  JOCKEY_TIMELINE_ANALYSIS.md  PLAN.md  PLAN_MODEL_QUALITY.md  PROJECT_SUMMARY.md  cameras_1cam.json  cameras_5cam.json  cameras_all_25.json  cameras_example.json  cameras_test_files.json  cameras_test_video.json  docker-compose.yml  go2rtc-test.yaml  go2rtc.yaml  requirements_deepstream.txt  session_log.md  test_deepstream_15cam.sh  test_deepstream_25cam.sh  test_fps_benchmark.sh
Kabirhan-Frontend/: Dockerfile  nginx.conf  vite.config.ts
Kabirhan-Frontend/src/: App.tsx
Kabirhan-Frontend/src/components/: Go2RTCPlayer.tsx
Kabirhan-Frontend/src/components/operator/: CameraGrid.tsx  CameraSettings.tsx  PTZControlPanel.tsx
Kabirhan-Frontend/src/components/public-display/: PTZCameraDisplay.tsx
Kabirhan-Frontend/src/config/: cameras.ts  go2rtc.ts
Kabirhan-Frontend/src/pages/: PublicDisplay.tsx
Kabirhan-Frontend/src/pages/analytics/: AnalyticsLayout.tsx  ReIDLabeler.tsx  TimelineView.tsx
Kabirhan-Frontend/src/services/: analyticsApi.ts  backendConnection.ts  detectionBuffer.ts
Kabirhan-Frontend/src/store/: cameraStore.ts  raceStore.ts
Kabirhan-Frontend/src/utils/: frameLogger.ts
admin/: index.html
api/: camera_control.py  camera_io.py  deepstream_pipeline.py  legacy_pipeline.py  server.py  shared.py
api/analytics/: __init__.py  export.py  frame_server.py  indexer.py  pairs_store.py  router.py
archive/: README.md
archive/cpp_legacy/: analysis_pipeline.cpp  analysis_pipeline.h  diag_logger.cpp  dual_pipeline.cpp  dual_pipeline.h  main.cpp  pipeline.cpp  pipeline.h
archive/notes/: session_log.md
configs/: camera_roi.json  camera_roi_normalized.json  cameras_5.json  cameras_live.json  cameras_live_ordered.json  cameras_recording1_rtsp.json  cameras_smoke_osnet.json  cameras_test_15.json  cameras_test_8.json  cameras_test_files.json  cameras_test_files_ordered.json  go2rtc_files.yaml  go2rtc_live.yaml  go2rtc_recording1.yaml  go2rtc_recording2.yaml  hsv_centroids.yml
configs/archive/: cameras_test_10.json  cameras_test_6.json  cameras_test_7.json  go2rtc_25cam.yaml  go2rtc_files.yaml  go2rtc_test.yaml
deepstream/: ARCHITECTURE.md  CMakeLists.txt  config.py  diag.py  main.py  pipeline.py  pipeline_test.py  rv_plugin.py
deepstream/configs/: labels_color.txt  nvinfer_jockey.txt  nvinfer_jockey_1cam.txt  nvinfer_jockey_5cam.txt  nvinfer_racevision.txt  nvinfer_yolov8n_trigger.txt  nvinfer_yolov8s.txt  nvinfer_yolov8s_analysis.txt  sgie_color.txt  sgie_color_dinov2_backup.txt  tracker_config.txt  tracker_iou.yml
deepstream/configs/archive/: nvinfer_jockey_1cam.txt  tracker_bytetrack.yml  tracker_config.txt
deepstream/modules/: builder.py  colors.py  geom.py  probes.py  snapshots.py
deepstream/src/: analysis_pipeline.h  color_classifier_parser.cpp  color_infer.cpp  color_infer.h  config.h  diag_logger.cpp  diag_logger.h  dinov2_color_parser.cpp  dinov2_prototypes_v1.h  main.cpp  osnet_color_parser.cpp  osnet_prototypes_v1.h  pipeline.cpp  pipeline.h  plugin.cpp  shm_writer.cpp  shm_writer.h  trigger_pipeline.cpp  trigger_pipeline.h  trigger_shm.cpp  trigger_shm.h  yolo_parser.cpp  yolo_parser.h
docs/: ARCHITECTURE.md  AUDIT_DEEPSTREAM_DETECTION.md  DOCS.md  MODELS.md  OPTIMIZATION_NOTES.md  PERFORMANCE_RESULTS.md  PLAN_HYBRID_MIGRATION.md  PLAN_MODEL_QUALITY.md  RUNBOOK.md
output/diagnose_v4_2026-04-25/: crops_index.json  gallery_all.html  gallery_gradcam.html  labels.json  step4_predict.json  verdict.md
output/diagnose_v4_2026-04-25/hsv_calibration/: gallery_lost_greens.html  gallery_lost_greens_diag.html  grid_search.csv
pipeline/: __init__.py  analyzer.py  camera_manager.py  clip_color_classifier.py  deepstream_logic.py  detections.py  fusion.py  hsv_classifier.py  jockey_reid.py  log_config.py  shm_reader.py  time_tracker.py  track_topology.py  trigger.py  trt_inference.py  vote_engine.py
scripts/: install_full_stack.sh  run_all.sh  rv.sh  test_deepstream_15cam.sh  test_deepstream_25cam.sh  test_fps_benchmark.sh
tools/: analyze_detection_logs.py  auto_label_cross_cam.py  build_dataset.py  build_gallery.py  calibrate_hsv.py  cluster_torso_crops.py  debug_detect_classify.py  diagnose_color_classifier.py  evaluate_classifier.py  evaluate_models.py  export_trt.py  extract_color_crops.py  ffmpeg_reader.py  generate_dinov2_prototypes_h.py  generate_osnet_prototypes_h.py  hsv_filter_calibrate.py  influx_writer.py  make_test_config.py  prepare_training_data.py  record_cameras.py  roi_editor.html  roi_server.py  rollback_to_dinov2.sh  run_record.py  rv_run.py  sandbox.py  set_camera_resolution.py  test_color_models.py  test_color_video.py  test_osnet_sgie_parity.py  test_pipeline_exp11.py  test_pipeline_on_files.py  test_shm_torn_read.py  test_visual.py  track_jockey_timeline.py  train_clip_classifier.py  train_color_classifier.py  train_color_v3.py  train_jockey.py  viewer_grid.py
